# stt

./: .env  .gitignore  CLAUDE.md  PROPOSAL_REGIONAL_MEASUREMENT_SYSTEM.md  PROPOSAL_STREAMING.md  PROPOSAL_WAKE_WORD.md  README.md  TODO.md  UNIVERSAL_PATTERN_FRAMEWORK.md  autonomous_refactoring_final_report.md  config.json  debug_abbreviation.py  debug_abbreviation_detection.py  debug_entity_detection.py  debug_punctuation_model.py  debug_with_logging.py  framework_validation_report.json  framework_validation_report.md  goobits.yaml  performance_optimization_report.md  phase3_completion_report.md  profile_formatter.py  pyproject.toml  setup-config.yaml  setup.sh  stt.py  test.py  test_french_extension.py  test_time_range_patterns.py  test_universal_framework.py  vm.json
docker/: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  start.sh  start_both.py
docker/dashboard/: admin.css  admin.scss  dashboard.js
docker/src/: api.py  simple_websocket_server.py
docker/tests/: test_websocket_integration.py
docs/: LOGGING.md
examples/: __init__.py  smart_voice_demo.py  structured_logging_demo.py  test_smart_voice_demo.py
scripts/: generate_ssl_certs.py  generate_token.py  time_range_testing_script.py
src/: __init__.py  main.back.py  main.py
src/audio/: __init__.py  audio_streamer.py  capture.py  linux_recorder.py  mac_recorder.py  recorder.py  recorder_factory.py  vad.py
src/core/: config.py
src/goobits_stt/: __init__.py  app_hooks.py  cli.py
src/goobits_stt/audio/: audio_streamer.py  capture.py  decoder.py  encoder.py  opus_batch.py  vad.py
src/goobits_stt/core/: config.py  token_manager.py
src/goobits_stt/modes/: __init__.py  base_mode.py  conversation.py  hold_to_talk.py  listen_once.py  tap_to_talk.py  wake_word.py
src/goobits_stt/text_formatting/: capitalizer.py  common.py  constants.py  formatter.py  nlp_provider.py  pattern_converter.py  regex_patterns.py  utils.py
src/goobits_stt/text_formatting/detectors/: __init__.py  code_detector.py  numeric_detector.py  web_detector.py
src/goobits_stt/transcription/: client.py  server.py  streaming.py
src/goobits_stt/utils/: ssl.py
src/logs/: ConversationMode.txt  ListenOnceMode.txt  text_formatting.txt  transcription.txt
src/modes/: __init__.py  base_mode.py  conversation.py  hold_to_talk.py  listen_once.py  tap_to_talk.py  wake_word.py
src/stt/: __init__.py  app_hooks.py  cli.py  setup.sh  simple_server_utils.py
src/stt/audio/: __init__.py  audio_streamer.py  capture.py  decoder.py  encoder.py  opus_batch.py  vad.py
src/stt/core/: config.py  logging.py  model_manager.py  rate_limiter.py  token_manager.py
src/stt/modes/: __init__.py  base_mode.py  conversation.py  hold_to_talk.py  listen_once.py  tap_to_talk.py  wake_word.py
src/stt/text_formatting/: batch_regex.py  capitalizer.py  capitalizer_context.py  capitalizer_protection.py  capitalizer_rules.py  common.py  constants.py  entity_aware_sentence_detector.py  entity_boundary_validator.py  entity_categories.py  entity_category_utils.py  entity_metadata_analyzer.py  entity_processor.py  fallback_formatter.py  formatter.py  intelligent_word_classifier.py  mapping_registry.py  modern_pattern_cache.py  multi_language_resource_manager.py  nlp_provider.py  number_word_context.py  pattern_cache.py  pattern_cache_monitor.py  pattern_converter.py  pattern_integration_tester.py  pattern_testing_framework.py  pattern_validation_framework.py  regex_patterns.py  spacy_doc_cache.py  time_range_conflict_detector.py  universal_code_mapper.py  universal_pattern_framework.py  universal_priority_manager.py  utils.py
src/stt/text_formatting/converters/: __init__.py  base.py  code_converter.py  measurement_converter.py  (+3 more)
src/stt/transcription/: __init__.py  client.py  server.py  streaming.py
src/stt/utils/: ssl.py
src/text_formatting/: __init__.py  capitalizer.py  common.py  constants.py  formatter.py  match_code.py  match_entities.py  match_numeric.py  match_web.py  nlp_provider.py  pattern_converter.py  regex_patterns.py
src/text_formatting/detectors/: __init__.py  code_detector.py  numeric_detector.py  web_detector.py
src/text_formatting/resources/: en.json  es.json
src/transcription/: client.py  server.py  streaming.py
src/transcription/backends/: __init__.py  base.py  faster_whisper_backend.py  parakeet_backend.py
stt/: cli.py
tests/: conftest.py  test_cli_smoke.py
tests/__tools__/: __init__.py  pytest_diff_tracker.py  pytest_enhanced_runner.py  pytest_failure_analyzer.py  verify_test_setup.py
tests/demos/: demo_document_speech.py
tests/fixtures/text/: test_all_types.md  test_complete.md  test_current_approach.html  test_current_approach.json  test_emotion_content.md  test_markdown.md  test_plain.txt  test_simple.md
tests/integration/: test_cli_smoke.py  test_docker_structure.py  test_opus_streaming.py  test_server_integration.py  test_smart_voice_demo.py
tests/text_formatting/: test_advanced_edge_cases.py  test_basic_formatting.py  test_code_entities.py  test_contextual_numbers.py  test_entity_interactions.py  test_financial_entities.py  test_formatter_comprehensive.py  test_fun_entities.py  test_i18n.py  test_i18n_es_code.py  test_i18n_es_web.py  test_math_entities.py  test_numeric_entities.py  test_quotes_and_measurements.py  test_skip_methods.py  test_suffix_handling.py  test_time_and_duration.py  test_web_entities.py
tests/tools/: __init__.py  diff_tracker.py  failure_analyzer.py  summary_plugin.py  verify_test_setup.py
tests/unit/text_formatting/: __init__.py  test_basic_formatting.py  test_code_entities.py  test_contextual_numbers.py  test_entity_detector.py  test_entity_interactions.py  test_financial_entities.py  test_fun_entities.py  test_i18n.py  test_i18n_es_code.py  test_i18n_es_web.py  test_math_entities.py  test_numeric_entities.py  test_quotes_and_measurements.py  test_regional_measurements.py  test_skip_methods.py  test_spanish_i18n.py  test_suffix_handling.py  test_time_and_duration.py  test_time_range_patterns.py  test_web_entities.py
(+48 files in other folders)
