[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goobits-stt"
version = "1.0.0"
description = "GOOBITS STT - Pure speech-to-text engine with multiple operation modes"
authors = [{name = "GOOBITS Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["speech-to-text", "whisper", "transcription", "stt", "voice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies for STT functionality
dependencies = [
    "websockets>=10.0",
    "numpy>=1.21.0",
    "cryptography>=3.0.0",
    "PyJWT>=2.0.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    # STT-specific
    "faster-whisper>=1.0.0",
    "ctranslate2>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "silero-vad>=4.0.0",
    "deepmultilingualpunctuation>=1.0.0",
    "spacy>=3.8.0",
    "pyparsing>=3.0.0",
    "opuslib>=3.0.0",
    "pynput>=1.7.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.20.0",
    "pytest-xdist>=3.0.0",
    "pytest-sugar>=0.9.0",
    "pytest-clarity>=1.0.0",
    "pytest-html>=3.0.0",
    "pytest-json-report>=1.5.0",
    "rich>=13.0.0",
    "ruff>=0.1.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[project.scripts]
stt = "stt:main"
stt-server = "src.transcription.server:main"

# Package discovery
[tool.setuptools.packages.find]
include = ["src*", "stt*"]
exclude = ["tests*", "docker*", "scripts*", "**/__pycache__", "*.egg-info", "build", "dist"]

# Code Quality Tools Configuration
[tool.ruff]
select = ["E", "F", "W", "UP"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Missing docstrings
]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    ".pytest_cache",
]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = [
    "venv/",
    ".pytest_cache/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "websockets.*",
    "faster_whisper.*",
    "deepmultilingualpunctuation.*",
    "spacy.*",
    "opuslib.*",
    "silero_vad.*",
    "torchaudio.*",
]
ignore_missing_imports = true